--- a/service-b-storage/Dockerfile
+++ b/service-b-storage/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app .
 
-CMD ["uvicorn", "main:app", "--host", "localhost", "--port", "8001"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
